tests/error/modifier_errors/flags_nested_control_dagger.err
Error: Unitary constraint violation (at $FILE:16:12)
   | 
14 |     with control(ctrl):
15 |         with dagger:
16 |             foo(q)
   |             ^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
